# DeepBath

./: .gitignore  Architecture.md  CLAUDE.md  README.md  bf.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: mcp_agent.py  rag_agent.py  sql_agent.py  state.py  supervisor.py
backend/app/core/: config.py  db.py  llm.py  logging.py
backend/app/guards/: __init__.py  jailbreak.py  pii.py
backend/app/monitoring/: __init__.py  langfuse_client.py
backend/app/routers/: chat.py  health.py  voice.py
backend/app/schemas/: chat.py
backend/app/services/: asr.py  embeddings.py  mcp_client.py  rag.py  sql_safety.py  sql_service.py  vector_store.py
backend/scripts/: ingest_policies.py
backend/tests/: test_guards.py  test_health.py  test_rag_chunker.py  test_sql_safety.py
data/policies/: fees_overseas_transfer.md  fixed_deposit.md
data/seed/: 01-schema.sql  02-customers.sql  03-transactions.sql  04-readonly-role.sql
docs/: SLIDES.md  TECH_STACK.md  demo-script.md
frontend/: README.md  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentTracePanel.tsx  ChatPanel.tsx  ThemeToggle.tsx  VoiceButton.tsx
frontend/lib/: api.ts  types.ts
mcp-server/: Dockerfile  pyproject.toml
mcp-server/src/: server.py
